<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="68dp"
                android:src="@drawable/logo_ilearn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcomebackimg"
                android:layout_width="200dp"
                android:layout_height="104dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_img" />

            <EditText
                android:id="@+id/signin_mobileEmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="149dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/mobile_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomebackimg" />


            <EditText
                android:id="@+id/signin_passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_mobileEmailEt" />


            <TextView
                android:id="@+id/signin_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/sign_in"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_passwordEt"
                app:layout_constraintVertical_bias="0.124" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/sign_floatingBtn"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:backgroundTint="#0081FF"
                android:src="@drawable/icarrow_forward"
                app:fabCustomSize="74dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_passwordEt"
                app:layout_constraintVertical_bias="0.048"
                app:maxImageSize="46dp" />

            <TextView
                android:id="@+id/forgot_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="232dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/forgot_password"
                android:textColor="#4C93FF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signin_txtview" />

            <TextView
                android:id="@+id/dont_hv_acc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/don_t_have_an_account"
                android:textColor="#AFAFAF"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_txt" />

            <TextView
                android:id="@+id/dont_hv_acc_signup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/signup"
                android:textColor="#4C93FF"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/dont_hv_acc_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</ScrollView>