<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="68dp"
            android:src="@drawable/logo_ilearn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_acc_tv"
            android:layout_width="200dp"
            android:layout_height="104dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_img" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_acc_tv" />

        <EditText
            android:id="@+id/mobileEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/mobile_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEt" />

        <EditText
            android:id="@+id/createPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileEmailEt" />

        <EditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPasswordEt" />

            <TextView
                android:id="@+id/signup_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/sign_up"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEt"
                android:textSize="24sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/signup_floatingBtn"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:backgroundTint="#0081FF"
            android:layout_marginTop="50dp"
            android:src="@drawable/icarrow_forward"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fabCustomSize="74dp"
            app:maxImageSize="46dp" />

            <TextView
                android:id="@+id/already_hv_acc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/already_have_an_account"
                android:textColor="#AFAFAF"
                android:textSize="16sp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_txtview"
                android:layout_marginStart="50dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/already_hv_acc_signin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/rubik_medium"
                app:layout_constraintStart_toEndOf="@id/already_hv_acc_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/signin"
                android:textColor="#4C93FF"
                android:textSize="16sp"
                android:textStyle="normal" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</ScrollView>